+ the L2derivatives of the SimpleL2ParamFamilies and the L2GroupFamilies now respect 
  restrictions in the support of the underlying distribution: the L2derivatives are 0
  whenever the argument x has liesInSupport(distribution,x, checkFin = TRUE) == FALSE
  (i.e., in discrete distiributions, with a more refined version, extending the checking
  of the numerically truncated support).
+ new model class / generator LogisticLocationScaleFamily
+ changed default for CvMMDEstiamtor to variant "Mod" (consistent to fitdistrplus)
  
bug fixes
+ discovered some issues with local variables in L2Families (global values were used instead...)  
+ default for asCov of CvMMDEstimator was inconsistent: the estimator was using emp.cdf, but
  the asyCov was using mu the current best fit model distribution 
+ in the wrappers to MDEstimator: CvMMDEstimator, KolmogorovMDEstimator, TotalVarMDEstimator, 
  HellingerMDEstimator, we had the "wrong" call in slot estimate.call
+ show-method for ParamWithShapeFamParameter and MCEstimate did unnecessary casting to superclasses
  hence hid the true class
+ argument distance did not show it came from CvMDist, CvMDist2 via CvMMDEstiamtor when unparsed -- 
  now the unparsed argument in CvMMDEstimator is called CvMDist0 so shows that it is related to 
  CvMDist 
  
under the hood:

+ As this is more for internal purposes, example code for the parsing of dots argument 
  is in lines ll 275--334 in mleCalc-methods.R (wrapped in a if(FALSE){ }).
+ in code in SimpleL2ParamFamilies.R: 
   + param.0 denotes the local current parameter of the L2Family  
   + param is used as function argument
   + <paramname>.0 is used in .fct - functions as local variant (intern to fct) of the current parameter
   + in the substituted L2deriv.fct, we use <paramname>.1 which is substituted for <paramname>.0
   + in case <paramname>.0 is already used otherwise (as in NbinomMeanSizeFamily) we use <paramname>.00 instead