@@ -12,6 +12,7 @@
 \alias{GParetoFamily-class}
 \alias{BetaFamily-class}
 \alias{NormLocationScaleFamily-class}
+\alias{CauchyLocationFamily-class}
 \alias{CauchyLocationScaleFamily-class}
 \alias{LogisticLocationScaleFamily-class}
 
@@ -24,7 +25,7 @@ In this file we describe classes
 \code{BinomFamily}, \code{PoisFamily}, \code{GammaFamily},
 \code{BetaFamily}, and class \code{GParetoFamily} ``extending'' (no new slots!)
 class \code{L2ParamFamily} (the latter via \code{L2ScaleShapeUnion}),
-class \code{NormLocationFamily},
+class \code{NormLocationFamily}, class \code{CauchyLocationFamily}
 ``extending'' (no new slots!) class \code{"L2LocationFamily"}, classes
 \code{NormScaleFamily}, \code{ExpScaleFamily}, and \code{LnormScaleFamily} 
 ``extending'' (no new slots!) class \code{"L2ScaleFamily"}, and classes
@@ -119,8 +120,8 @@ Class \code{"L2ParamFamily"},  directly.\cr
 Class \code{"ParamFamily"}, by class \code{"L2ParamFamily"}.\cr
 Class \code{"ProbFamily"}, by class \code{"ParamFamily"}.
 \cr
-Class \code{NormLocationFamily},
-``extends'' (no new slots!):\cr
+Class \code{NormLocationFamily}, class \code{CauchyLocationFamily}
+``extend'' (no new slots!):\cr
 Class \code{"L2LocationFamily"}, directly.\cr
 Class \code{"L2LocationScaleUnion"}, by class \code{"L2LocationFamily"}.\cr
 Class \code{"L2GroupParamFamily"}, by class \code{"L2LocationScaleUnion"}.\cr
